# tokio-memcache

./: .travis.yml  Cargo.toml  DEV-NOTES.md  NOTES.md  README.md
benches/: command_get.rs  request.rs
examples/: serde.rs  simple.rs  version.rs
src/: connection.rs  errors.rs  lib.rs  protocol.rs  types.rs
src/client/: client.rs  codec.rs  connection.rs  mod.rs  protocol.rs  service.rs
src/codec/: mod.rs
src/codecs/: mod.rs
src/codecs/text/: mod.rs  tests.rs
src/io/: client.rs  codec.rs  conn.rs  errors.rs  mod.rs  proto.rs
src/io/conn/: interface.rs  mod.rs  response.rs  sink.rs  stream.rs
src/io/handle/: delete.rs  get.rs  mod.rs  quit.rs  set.rs  version.rs
src/io/tests/: codec_serialization.rs  mod.rs
src/protocol/: command.rs  data_type.rs  extras.rs  magic.rs  mod.rs  request.rs  response.rs
src/protocol/extras/: flush.rs  get.rs  increment.rs  mod.rs  set.rs  verbosity.rs
src/protocol/request/: builder.rs  mod.rs
src/protocol/request/tests/: mod.rs  serialization.rs
src/protocol/response/: mod.rs
src/protocol/tests/: mod.rs  request.rs  request_plain.rs  request_serde.rs  response.rs
src/tokio/: client.rs  codec.rs  errors.rs  handle.rs  proto.rs
src/tokio/handle/: delete.rs  get.rs  mod.rs  quit.rs  version.rs
src/tokio/tests/: codec_serialization.rs
src_old/: lib.rs
src_old/io/: client.rs  codec.rs  proto.rs
src_old/io/handle/: get.rs  set.rs  version.rs
src_old/io/tests/: codec_serialization.rs
tests/: command_add.rs  command_get.rs  connection.rs  mod.rs
