[package]
name = "tokio-memcache"
description = "Tokio memcache client. WIP"
version = "0.0.3"
repository = "https://github.com/svartalf/tokio-memcache"
authors = ["svartalf <self@svartalf.info>"]
keywords = ["tokio", "futures", "memcache", "memcached"]
categories = ["asynchronous", "caching"]
license = "Apache-2.0"

[features]
default = []
nightly = ["clippy"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.8"
tokio-service = "0.1.0"
tokio-proto = "0.1.1"
tokio-io = "0.1.2"
bytes = "0.4.4"
byteorder = "1.1.0"
enum_primitive = "0.1.1"
# serde = "*"
# rmp-serde = "*"

clippy = { version = "^0.0", optional = true }

[badges]
travis-ci = { repository = "https://github.com/svartalf/tokio-memcache", branch = "master" }

[profile.release]
debug = true
lto = false