[package]
name = "tokio-memcache"
description = "Tokio memcache client. WIP"
version = "0.0.4"
repository = "https://github.com/svartalf/tokio-memcache"
authors = ["svartalf <self@svartalf.info>"]
keywords = ["tokio", "futures", "memcache", "memcached"]
categories = ["asynchronous", "caching"]
license = "Apache-2.0"

[features]
default = []
nightly = []

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.11"
tokio-service = "0.1.0"
tokio-proto = "0.1.1"
tokio-io = "0.1.4"
bytes = "0.4.5"
byteorder = "1.2.1"
enum_primitive = "0.1.1"
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
serde_derive = "1.0"

[badges]
travis-ci = { repository = "https://github.com/svartalf/tokio-memcache", branch = "master" }
