[package]
name = "tokio-memcache"
description = "Tokio memcache client. WIP"
version = "0.0.4"
repository = "https://github.com/svartalf/tokio-memcache"
authors = ["svartalf <self@svartalf.info>"]
keywords = ["tokio", "futures", "memcache", "memcached"]
categories = ["asynchronous", "caching"]
license = "MIT/Apache-2.0"

[features]
default = []
nightly = []

[dependencies]
futures = "0.1.19"
tokio = { version = "0.1.4", features = ["unstable-futures"] }
bytes = "0.4.6"
byteorder = "1.2.1"
enum_primitive = "0.1.1"
tower = { git = "https://github.com/tower-rs/tower" }

[badges]
travis-ci = { repository = "https://github.com/svartalf/tokio-memcache", branch = "master" }
